apache-httpd/apache-httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - image: registry.redhat.io/rhscl/httpd-24-rhel7
        name: webserver
        ports:
        - containerPort: 8080
          name: httpd
        volumeMounts:
        - name: webserver-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: webserver-persistent-storage
        persistentVolumeClaim:
          claimName: webserver-pv-claim
