apache-httpd/apache-httpd-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: webserver
    app: webserver
