apache-httpd/apache-httpd-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver
  labels:
    app: webserver
    service: webserver
spec:
  to:
    kind: Service
    name: webserver
  port:
    targetPort: 8080
